# cautious-octo-fortnight

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift
Core/: CMakeLists.txt
Core/include/: concepts.hpp  core_types.hpp  dynamic_vector.hpp  generic_handle.hpp  handle.hpp  math.hpp  primitives.hpp  ptr_util.hpp  slot_map.hpp  string.hpp  type_traits.hpp
Core/test/: CMakeLists.txt  dynamic_vector.cpp  math_test.cpp
asset/Tribbie/: Trianne.pmx  Tribbie.pmx  Trinnon.pmx  使用规则.txt  颜赤.tga
cmake/: sanitizer.cmake
cmake/toolchains/: macos.cmake
engine/: CMakeLists.txt
engine/include/: EngineConfig.hpp  IGame.hpp  Primitives.hpp  Time.hpp  UpdateContext.hpp  engine.hpp
engine/include/Content/: MeshFormat.hpp  SceneFormat.hpp
engine/include/ECS/: AnimationSystem.hpp  Archetype.hpp  Component.hpp  ComponentTypeRegistry.hpp  Entity.hpp  EntityRegistry.hpp  ISystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  TransformSystem.hpp  UISystem.hpp  World.hpp
engine/include/Importer/: MeshImporter.hpp  SceneImporter.hpp
engine/include/Log/: Category.hpp  ConsoleSink.hpp  ISink.hpp  Level.hpp  Log.hpp  Logger.hpp  Message.hpp  SDLSink.hpp
engine/include/Platform/: Window.hpp
engine/include/RHI/: RHIBuffer.hpp  RHIBufferHelpers.hpp  RHICommandList.hpp  RHICommandListPool.hpp  RHIDefinitions.h  RHIDesc.h  RHIDevice.hpp  RHIFence.hpp  RHIFenceHelpers.hpp  RHIFramePacing.hpp  RHIPipelineCache.hpp  RHIPipelineHelpers.hpp  RHIPipelineState.hpp  RHIPipelineStateBuilder.hpp  RHIPlatform.h  RHIResource.hpp  RHIShader.hpp  RHIShaderLoader.hpp  RHISwapchain.hpp  RHISwapchainHelpers.hpp  RHITexture.hpp  RHITypes.hpp  RHIVertexLayout.hpp
engine/include/RHI/Debug/: RHIDebugMarker.hpp  RHIValidation.hpp  ResourceTracker.hpp
engine/include/RenderGraph/: RGHandle.hpp  RenderGraph.hpp  RenderGraphBuilder.hpp  RenderGraphResources.hpp  RenderPass.hpp
engine/include/Resource/: Mesh.hpp  MeshTraits.hpp  RenderingResourceTraits.hpp  RenderingResources.hpp  Resource.hpp  ResourceManager.hpp  ResourceTraits.hpp  Script.hpp  Shader.hpp  Submesh.hpp  SubmeshTraits.hpp  Texture.hpp  TextureTraits.hpp
engine/include/Scene/: SceneLoader.hpp
engine/include/Time/: Timer.hpp
engine/src/: CMakeLists.txt  engine.cpp
engine/src/Content/: CMakeLists.txt  MeshFormat.cpp
engine/src/ECS/: AnimationSystem.cpp  CMakeLists.txt  EntityRegistry.cpp  PhysicsSystem.cpp  RenderSystem.cpp  TransformSystem.cpp  UISystem.cpp  World.cpp
engine/src/Importer/: CMakeLists.txt  MeshImporter.cpp  SceneImporter.cpp
engine/src/Log/: CMakeLists.txt  ConsoleSink.cpp  Logger.cpp  SDLSink.cpp
engine/src/Platform/: CMakeLists.txt  Window.cpp
engine/src/RHI/: CMakeLists.txt  RHIDevice.cpp
engine/src/RHI/D3D12/: D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12Device.cpp  D3D12Device.hpp  D3D12Fence.cpp  D3D12Fence.hpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12Shader.cpp  D3D12Shader.hpp  D3D12Swapchain.cpp  D3D12Swapchain.hpp  D3D12Texture.cpp  D3D12Texture.hpp
engine/src/RHI/Debug/: RHIDebugMarker.cpp
engine/src/RHI/Metal/: MetalCommandList.swift  MetalCommandList_Bridge.h  MetalCommandList_CPPWrapper.cpp  MetalCommandList_CPPWrapper.hpp  MetalDevice.swift  MetalDeviceFactory.cpp  MetalDevice_Bridge.h  MetalDevice_CPPWrapper.cpp  MetalDevice_CPPWrapper.hpp  MetalTypes.h  RenderToyMetalRHI-Bridging-Header.h
engine/src/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderGraphResources.cpp  RenderPass.cpp
engine/src/Scene/: CMakeLists.txt  SceneLoader.cpp
engine/src/Time/: CMakeLists.txt  Timer.cpp
engine/test/: CMakeLists.txt  ComponentTypeRegistry.cpp  EntityRegistry.cpp
engine/test/Content/: MeshFormatTest.cpp  SceneFormatTest.cpp
engine/test/ECS/: ComponentTypeRegistryTest.cpp  EntityRegistryTest.cpp
engine/test/Importer/: MeshImporterTest.cpp  SceneImporterTest.cpp
engine/test/Importer/test_data/: complex.scene.toml  empty.scene.toml  simple_mesh.scene.toml  simple_transform.scene.toml
engine/test/RenderGraph/: RenderGraphExample.cpp
engine/test/Resource/: ResourceManagerTest.cpp
engine/test/Scene/: SceneLoaderTest.cpp
samples/demo/: CMakeLists.txt
samples/demo/include/: GameLogicSystem.hpp  InputSystem.hpp  demo.hpp
samples/demo/src/: CMakeLists.txt  GameLogicSystem.cpp  InputSystem.cpp  demo.cpp  main.cpp
